# man.sr.ht

./: .build.yml  .editorconfig  .git_archival.txt  .gitignore  Makefile  README.md  alembic.ini.example  config.example.ini  config.ini.example  go.mod  go.sum  man-srht-keys  man-srht-shell  mansrht-initdb  mansrht-keys  mansrht-migrate  mansrht-shell  pyproject.toml  run.py  schema.sql  setup.py  static
.builds/: alpine.yml  archlinux.yml  debian.yml
api/: go.mod  gqlgen.yml  server.go
api/account/: middleware.go
api/graph/: generate.go  schema.graphqls  schema.resolvers.go
ariadne/: git.toml.in
contrib/: fixup-scopes  git-export  git-import
mansrht/: access.py  app.py  decorators.py  repo.py  wikis.py
mansrht/alembic/: env.py
mansrht/alembic/versions/: 03db50cf589f_add_user_type_to_user.py  2ae2cb1918d6_drop_oauth_revocation_token.py  35d47ef308bc_reduce_scope_of_user_type.py  391282b09533_remove_path_from_wikis.py  4a25aadeac6f_use_canonical_user_id.py  74fb41c265f8_add_user_remote_id.py  7c8fb3fcd76a_migrate_to_use_backing_repo.py  9dbb1c9c8e75_update_user_constraints.py  (+4 more)
mansrht/blueprints/: auth.py  create.py  html.py  manage.py  notify.py  public.py
mansrht/git/: queries.graphql
mansrht/templates/: content.html  create.html  delete.html  index.html  info.html  man.html  manage.html  missing-repo.html  new-wiki.html  oauth-error.html  select.html  user.html
mansrht/types/: __init__.py  repo.py  user.py  wiki.py
migrations/: 0001_switch_to_brant.sql  0002_add_visibility_enum.sql  0003_remove_backing_repo.sql
scss/: main.scss
